feat: Add public program and about us pages to the public website.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pesantren Al-Bisri - Sistem Manajemen Terpadu</title>
-  <meta name="author" content="Pesantren Al-Bisri" />
+  <title>Al-Bisri</title>
+  <meta name="author" content="Al-Bisri" />
 
   <!-- Favicon menggunakan logo Al-Bisri dengan berbagai ukuran -->
   <link rel="icon" type="image/png" sizes="16x16" href="/kop-albisri.png" />
@@ -20,13 +20,12 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <meta property="og:title" content="Pesantren Al-Bisri - Sistem Manajemen" />
-  <meta property="og:description" content="Sistem manajemen terintegrasi untuk pesantren" />
+  <meta property="og:title" content="Al-Bisri" />
+  <meta property="og:description" content="Pusat Pendidikan & Kemandirian" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/kop-albisri.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@pesantrenalbisri" />
   <meta name="twitter:image" content="/kop-albisri.png" />
 </head>
 
